--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[features]
 
+[dependencies]
+im-rc = { version = "15.0.0", features = ["proptest", "serde", "arbitrary" ] }
