Object and Number

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,9 @@ edition = "2018"
 [features]
 
 [dependencies]
-im-rc = { version = "15.0.0", features = ["proptest", "serde", "arbitrary" ] }
+# im = { version = "15.0.0", features = [] }
+query_interface = "0.3.5"
+rc = "0.1.1"
+bigdecimal = "0.2.0"
+bigint = "4.4.3"
+f128 = "0.2.8"
