--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,10 @@ edition = "2018"
 [features]
 
 [lib]
-proc-macro = true
 
 [dependencies]
-# im = { version = "15.0.0", features = [] }
-query_interface = "0.3.5"
+im = { version = "15.0.0", features = [] }
 rc = "0.1.1"
-# bigdecimal = "0.2.0"
 bigint = "4.4.3"
-# f128 = "0.2.8"
+lazy_static = "1.4.0"
+mut_static = "5.0.0"
