--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-    "editor.codeActionsOnSave": null
     "psi-header.config": {
         "license": "MPL-2.0+",
         "forceToTop": true,
@@ -17,10 +16,12 @@
             "dist/**"
         ],
         "isActive": true,
-		"modAuthor": "Modified By: ",
-		"modDate": "Last Modified: ",
-		"modDateFormat": "date",
-		"include": ["rs"],
+        "modAuthor": "Modified By: ",
+        "modDate": "Last Modified: ",
+        "modDateFormat": "date",
+        "include": [
+            "rs"
+        ],
         "exclude": [
             "jsonc",
             "json",
@@ -46,23 +47,26 @@
             "mapTo": "javascript"
         }
     ],
-	"psi-header.variables": [
-		["projectCreationYear", "2020"]
+    "psi-header.variables": [
+        [
+            "projectCreationYear",
+            "2020"
+        ]
     ],
     "psi-header.templates": [
         {
             "language": "*",
             "template": [
-				"File: <<filename>>",
-				"Project: <<projectname>>",
-				"File Created: <<filecreated('dddd, Do MMMM YYYY h:mm:ss a')>>",
-				"Author: <<author>> (<<authoremail>>)",
-				"-----",
-				"Last Modified: <<dateformat('dddd, Do MMMM YYYY h:mm:ss a')>>",
-				"Modified By: <<author>> (<<authoremail>>>)",
-				"-----",
-				"Copyright <<projectCreationYear>> - <<year>> <<copyrightholder>>, <<company>>"
-
+                "File:          <<filename>>",
+                "Project:       <<projectname>>",
+                "File Created:  <<filecreated('dddd, Do MMMM YYYY h:mm:ss a')>>",
+                "Author:        <<author>> (<<authoremail>>)",
+                "-----",
+                "Last Modified: <<dateformat('dddd, Do MMMM YYYY h:mm:ss a')>>",
+                "Modified By:   <<author>> (<<authoremail>>>)",
+                "-----",
+                "Copyright      <<projectCreationYear>> - <<year>> <<copyrightholder>>, <<company>>",
+                "-----",
                 "This Source Code Form is subject to the terms of the Mozilla Public",
                 "License, v. 2.0. If a copy of the MPL was not distributed with this",
                 "file, You can obtain one at http://mozilla.org/MPL/2.0/."
