--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ lazy_static = "1.4.0"
 linkme      = "0.2"
 mut_static  = "5.0.0"
 rc          = "0.1.1"
+serde       = "1.0.125"
 
 # docs.rs-specific configuration
 [package.metadata.docs.rs]
