--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,5 +72,14 @@
                 "file, You can obtain one at http://mozilla.org/MPL/2.0/."
             ]
         }
+    ],
+    "spellright.language": [
+        "English (American)",
+        "French"
+    ],
+    "spellright.documentTypes": [
+        "markdown",
+        "latex",
+        "plaintext"
     ]
 }
